<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Inglés Aventurero</string>
  <string name="aceptar">Aceptar</string>
  <string name="close_eng">Close</string>
  <string name="close_spn">Cerrar</string>
  <string name="EngCancel">Cancel</string>
  <string name="SpnCancel">Cancelar</string>
  <string name="confirmar">Confirmar</string>
  <string name="ok">Ok</string>
  <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
  <string name="azbanner_ad_unit_id">ca-app-pub-2023164965182296/9342420766</string>
  <string name="private_directory">ingles_aventurero</string>
  <string name="recibiendo_lista">Un error recibiendo la lista de las escenas.</string>
  <string name="descargando_escena">Un error descargando la escena de la red.</string>
  <string name="error_occurred_spn">Un Error Ocurrió</string>
  <string name="error_occurred_eng">An Error Occurred</string>
  <string name="appsbyflo_error_eng">You many not be connected to the internet, or perhaps www.appsbyflo\\ingles_aventurero is not functioning right now.</string>
  <string name="appsbyflo_error_spn">Hay posibilidad que no está connectado a la red o que www.appsbyflo\\ingles_aventurero no está funcionando ahora mismo.</string>
  <string name="pageInstructionTitleEng">Instructions</string>
  <string name="pageInstructionTitleSpn">Instrucciones</string>
  <string name="pageInstructionIntroEng">Listen to questions in green. Then press the microphone to respond with the answers in dark purple.</string>
  <string name="pageInstructionIntroSpn">Escucha las preguntas en verde. Entonces, oprima el micrófono para responder con las respuestas en morado oscuro.</string>
  <string name="pageOptionTextEng">Press the button:</string>
  <string name="pageOptionTextSpn">Oprima el botón:</string>
  <string name="pageMicTextSpn">Para intentar la respuesta.</string>
  <string name="pageMicTextEng">To give your response.</string>
  <string name="pagePlayTextEng">To hear a statement again.</string>
  <string name="pagePlayTextSpn">Para escuchar una declaración o respuesta otra vez.</string>
  <string name="pageExplanationTextEng">For a tip or an explanation.</string>
  <string name="pageExplanationTextSpn">Para ver una explicación o sugerencia.</string>
  <string name="pageScrollGroupEng">To scroll through different responses.</string>
  <string name="pageScrollGroupSpn">Para ver diferentes respuestas.</string>
  <string name="pageTurtleTextEng">To hear a statement or response slowly.</string>
  <string name="pageTurtleTextSpn">Para escuchar una declaración o respuesta lentamente.</string>
  <string name="pageClearSceneEng">To clear your answers from this page until the end of the scene press \'Limpiar Escena\' in the top menu.</string>
  <string name="pageClearSceneSpn">Para borrar las respuestas de esta página hasta la última, presione \'Limpiar Escena\' en el menú superior.</string>
  <string name="pageInstructionLastShowEng">Do not show again.</string>
  <string name="pageInstructionLastShowSpn">No mostrar otra vez.</string>
  <string name="inEnglish">in English</string>
  <string name="enEspanol">en español</string>
  <string name="lineExplanationTitleEng">Explanation</string>
  <string name="lineExplanationTitleSpn">Explicación</string>
  <string name="deleteSceneEng">Delete</string>
  <string name="deleteSceneSpn">¿Borrar</string>
  <string name="deleteSceneTitleEng">Delete Scene</string>
  <string name="deleteSceneTitleSpn">Borrar Escena</string>
  <string name="twentyfivePercent">Veinticinco porciento completo.</string>
  <string name="fiftyPercent">Cincuenta por ciento completo.</string>
  <string name="seventyFivePercent">Setenta y cinco por ciento completo.</string>
  <string name="ninety">Noventa por ciento completo.</string>
  <string name="hundredPercent">La escena esta lista.</string>
  <string name="downloadinglist">Descargando lista de escenas de la red.</string>
  <string name="downloadingscene">Descargando </string>
  <string name="download_title_eng">Download a Scene</string>
  <string name="download_title_spn">Descargue Una Escena De La Red</string>
  <string name="download_instructions_eng">Press a scene to begin downloading it.</string>
  <string name="download_instructions_spn">Oprima la escena para iniciar la descarga de la escena.</string>
  <string name="difficulty_instructions_eng">The number to the left is the scene\'s difficulty rating.</string>
  <string name="difficulty_instructions_spn">El número indica la dificultad.</string>
  <string name="delete_scene">Borre Una Escena</string>
  <string name="voice_attributions_title_eng">Voices in Scene</string>
  <string name="voice_attributions_title_spn">Voces en Escena</string>
  <string name="missed_pages_eng">You\'re at the end of the scene, but you missed a few pages. Scroll back to answer the questions.</string>
  <string name="missed_pages_spn">Estás al final de la escena, pero omitiste unas páginas. Retroceda para responder a las preguntas.</string>
  <string name="missed_pages_title_eng">Missed Pages</string>
  <string name="missed_pages_title_spn">Páginas Omitidas</string>
  <string name="clear_page_eng">Under the menu press \'Clear Page\' to clear the scene from this page forward. All your matched replies will be erased.</string>
  <string name="clear_page_spn">Bajo el menú, presione \'Clear Page\' para limpiar la escena desde esta página hasta la ultima. Todas las respuestas marcadas se borrarán.</string>
  <string name="lines_shown_h_eng">Lines Shown Hint</string>
  <string name="lines_shown_h_spn">Líneas Mostradas Indicación</string>
  <string name="lines_shown_r_eng">Lines Shown Reply</string>
  <string name="lines_shown_r_spn">Líneas Mostradas Respuesta</string>
  <string name="lines_shown_spn">Líneas Mostradas</string>
  <string name="lines_shown_eng">Lines Shown</string>
  <string name="lines_shown_intro_eng">Each page shows the conversation in English and Spanish. Choose to only show the Spanish meanings, or the translation of each sentence, or perhaps nothing at all.</string>
  <string name="lines_shown_intro_spn">Cada página muestra la conversación en inglés y español. Elige mostrar solo los significados españoles, o la traducción de cada oración, o quizás nada en absoluto.</string>
  <string name="lines_shown_h_0_eng">No Spanish or English lines are shown.</string>
  <string name="lines_shown_h_0_spn">No se muestra líneas en español o en inglés.</string>
  <string name="lines_shown_h_1_eng">English phrase is shown.</string>
  <string name="lines_shown_h_1_spn">Oraciones en inglés se muestran.</string>
  <string name="lines_shown_h_2_eng">Spanish phrase is shown.</string>
  <string name="lines_shown_h_2_spn">Oraciones en español se muestran.</string>
  <string name="lines_shown_h_3_eng">All lines are shown including word for word translations.</string>
  <string name="lines_shown_h_3_spn">Todas las líneas se muestran incluyendo traducciones de palabra por palabra.</string>
  <string name="lines_shown_r_0_eng">No Spanish or English lines are shown.</string>
  <string name="lines_shown_r_0_spn">No se muestra líneas en español o en inglés.</string>
  <string name="lines_shown_r_1_eng">Spanish phrase is shown.</string>
  <string name="lines_shown_r_1_spn">Oraciones en español se muestran.</string>
  <string name="lines_shown_r_2_eng">Word for word translation in Spanish is shown.</string>
  <string name="lines_shown_r_2_spn">Traducción de palabra por palabra en español se muestra.</string>
  <string name="lines_shown_r_3_eng">All lines are shown including word for word translations.</string>
  <string name="lines_shown_r_3_spn">Todas las líneas se muestran incluyendo traducciones de palabra por palabra.</string>
  <string name="lines_shown_h_title_eng">Lines Shown For Other Person Talking (Green):</string>
  <string name="lines_shown_h_title_spn">Líneas Mostradas De La Otra Persona Quien Habla (Se Encuentran En Verde):</string>
  <string name="lines_shown_r_title_eng">Lines Shown For Your Responses (Dark Purple):</string>
  <string name="lines_shown_r_title_spn">Líneas Mostradas Para Tus Respuestas (Se Encuentran En Morado Oscuro):</string>
  <string name="wait_times_key">wait_times_key</string>
  <string name="wait_times_title">Rapidez</string>
  <string name="velocity_0_eng">Novice</string>
  <string name="velocity_0_spn">Novicio</string>
  <string name="velocity_1_eng">Slowly</string>
  <string name="velocity_1_spn">Despacio</string>
  <string name="velocity_2_eng">Regular</string>
  <string name="velocity_2_spn">Regular</string>
  <string name="velocity_3_eng">Solid</string>
  <string name="velocity_3_spn">Sólido</string>
  <string name="velocity_4_eng">Fast</string>
  <string name="velocity_4_spn">Rápido</string>
  <string name="velocity_5_eng">Advanced</string>
  <string name="velocity_5_spn">Adelantado</string>
  <string name="velocity_title_eng">Speed Of Transitions In Conversation</string>
  <string name="velocity_title_spn">Rapidez De Las Transiciones En La Conversación</string>
  <string name="your_scenes">Escenas</string>
  <string name="download_a_scene">Descargue Una Escena De La Red</string>
  <string name="num_of_active_scenes">num_of_active_scenes_key</string>
  <string name="completed_scenes">Escenas Completadas</string>
  <string name="no_completed_scenes">Todavía No Has Completado Una Escena</string>
  <string name="scenes_from_the_web">Escenas De La Red</string>
  <string name="no_reply_necessary_eng">You don\'t need to reply in this page.</string>
  <string name="no_reply_necessary_spn">No es necesario responder en esta página.</string>
  <string name="message_eng">A Message</string>
  <string name="message_spn">Un Mensaje</string>
  <string name="scene_incomplete_eng">Scene Is Incomplete</string>
  <string name="scene_incomplete_spn">Las Escenea Está Incompleta</string>
  <string name="download_again_eng">Please try to download the scene again.</string>
  <string name="download_again_spn">Por favor intente descargar la escena de nuevo.</string>
  <string name="scroll_to_next_page_eng">Scroll To Next Page</string>
  <string name="scroll_to_next_page_spn">Desplácese A La Página Siguiente</string>
  <string name="understood_eng">I understood:</string>
  <string name="understood_spn">Entendí:</string>
  <string name="already_completed_page_eng">Your answer didn\'t match any response, but since you\'ve already completed the page, just scroll to the next page."</string>
  <string name="already_completed_page_spn">"Su respuesta no coincide con ninguna respuesta, pero como ya ha completado la página, vaya a la página siguiente."</string>
  <string name="notification_eng">Notification</string>
  <string name="notification_spn">Notificación</string>
  <string name="picture_copy_right_info_eng">Each page has a picture which is comprised of one or more images from artists. Respect their licensing requirements.</string>
  <string name="picture_copy_right_info_spn">Cada página tiene una imagen que se compone de una o más imágenes de artistas. Respete los requisitos de las licencias de los artistas.</string>
  <string name="copyright_eng">Picture\'s Copyright Information</string>
  <string name="copyright_spn">Información De Derechos Sobre La Imagen</string>
  <string name="internet_down_eng">Internet Connection Lost</string>
  <string name="internet_down_spn">La Red No Está Disponible</string>
  <string name="good_job_english">Good Job!</string>
  <string name="good_job_spanish">Muy Bien!</string>
  <string name="finished_english">You\'ve finished the scene!</string>
  <string name="finished_spanish">Hay terminado la aventura!</string>
</resources>
